# sloppify

./: Cargo.toml  LICENSE  README.md
demo/: fs_utils_v2.rs  prototype_test.rs  routes_temp.rs
real_src/: encoder_internal.rs  metrics_debug.rs  net_debug.rs  plugin_helper.rs  sanitizer_backup.rs  sanitizer_bench.rs  validator_bench.rs
src/: ast.rs  cli.rs  generator.rs  main.rs  names.txt
src/render/: cpp.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
